# GStreamerCoAP

GStreamerPlugin/: Makefile  configure.ac  start.sh
GStreamerPlugin/nbproject/: configurations.xml  project.xml
GStreamerPlugin/nbproject/private/: Default.properties  configurations.xml  private.xml  timestamps-10.9.91.17-root-22  timestamps-10.9.91.17-xitren-22  timestamps-10.9.91.5-olga-22
GStreamerPlugin/src/: ImageSolver.c  ImageSolver.h  Makefile  Makefile.am  gstocv.c  gstocv.h  libgstocv_la-gstocv.lo
GStreamerPlugin/src/.deps/: libgstocv_la-gstocv.Plo
GStreamerPlugin/src/.libs/: libgstocv.exp  libgstocv.la  libgstocv.lai  libgstocv.ver
